--- a/src/Components/GameBoard/GameBoard.css
+++ b/src/Components/GameBoard/GameBoard.css
@@ -42,7 +42,7 @@
     height: 2cm;
     color: black;
     user-select: none;
-    
+    /* transform: rotateZ(180deg); */
 }
 
 .light-square{
@@ -58,31 +58,54 @@
     position: absolute;
     width: 0.2cm;
     height: 0.2cm;
-    background-color: rgb(55, 154, 22);
-    /* border: 0.2mm solid whitesmoke; */
+    background-color: rgb(47, 177, 27);
+    border: 1mm solid rgb(0, 0, 0);
     border-radius: 1cm;
+}
+
+.dot-highlights-parent{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* background-color: wheat; */
 }
 
 
 @media only screen and (max-device-width:700px) {
     .chess-board-row{
-        
-        width: 10cm;
+        /* border: 0.2mm solid red; */
+        width: 9.6cm;
     }
     .chess-board-squares{
-        
         width: 1.2cm;
         height: 1.2cm;
        
     }
 
     .chess-board{
-
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        /* border: 0.2mm solid blue; */
         min-width: 10cm;
         max-width: 10cm;
         min-height:10cm;
         max-height:10cm;
-        margin-left: 0.4cm;
+        /* margin-left: -0.4cm; */
     
+    }
+
+    .dot-highlights{
+        position: absolute;
+        width: 0.1cm;
+        height: 0.1cm;
+        background-color: rgb(47, 177, 27);
+        border: 0.5mm solid rgb(0, 0, 0);
+        border-radius: 1cm;
     }
 }
